fix for calcudoku spacing on mobile

--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -32,15 +32,16 @@ h2.loading-indicator {
 		display: grid;
 		height: $puzzle-dimension;
 		width: $puzzle-dimension;
-		@media (max-width: 420px) {
-			height: $puzzle-dimension * $scaling-420px;
-			width: $puzzle-dimension * $scaling-420px;
-		}
 		gap: 1px;
 		background-color: black;
 		border: solid 3px;
 		grid-template-columns: repeat($puzzle-size, 1fr);
 		grid-template-rows: repeat($puzzle-size, 1fr);
+		@media (max-width: 420px) {
+			height: $puzzle-dimension * $scaling-420px;
+			width: $puzzle-dimension * $scaling-420px;
+			border: solid 2px * $scaling-420px;
+		}
 
 		div.calcudoku-square {
 			position: relative;
@@ -50,6 +51,7 @@ h2.loading-indicator {
 			border: solid 2px;
 			@media (max-width: 420px) {
 				border: solid 2px * $scaling-420px;
+				padding: 0.3em * $scaling-420px;
 			}
 			cursor: pointer;
 
@@ -90,6 +92,10 @@ h2.loading-indicator {
 				position: absolute;
 				top: 0.2em;
 				left: 0.2em;
+
+				@media (max-width: 420px) {
+					font-size: 2em * $scaling-420px * $instructionScale;
+				}
 			}
 			input {
 				border: none;
@@ -99,7 +105,7 @@ h2.loading-indicator {
 				font-size: 4em * $instructionScale;
 				background-color: white;
 				@media (max-width: 420px) {
-					font-size: 4em * $scaling-420px;
+					font-size: 3.5em * $scaling-420px * $instructionScale;
 				}
 				text-align: right;
 				cursor: pointer;
@@ -155,7 +161,7 @@ div.puzzle-container {
 	}
 
 	&.instructions {
-		@include puzzle-container(4, 1 / 2);
+		@include puzzle-container(4, 3 / 4);
 	}
 }
 
